[workspace]
members = [
  "dango/cli",
  "dango/testing",
  "dango/exchange/account",
  "dango/exchange/account-factory",
  "dango/exchange/auth",
  "dango/exchange/bank",
  "dango/exchange/gateway",
  "dango/exchange/genesis",
  "dango/exchange/oracle",
  "dango/exchange/order-book",
  "dango/exchange/perps",
  "dango/exchange/proposal-preparer",
  "dango/exchange/taxman",
  "dango/exchange/types",
  "dango/exchange/upgrade",
  "dango/exchange/vesting",
  "dango/exchange/warp",
  "dango/grug/app",
  "dango/grug/crypto",
  "dango/grug/db/disk",
  "dango/grug/db/memory",
  "dango/grug/ffi",
  "dango/grug/jellyfish-merkle",
  "dango/grug/macros",
  "dango/grug/math",
  "dango/grug/storage",
  "dango/grug/tester",
  "dango/grug/types",
  "dango/grug/vm/hybrid",
  "dango/grug/vm/rust",
  "dango/grug/vm/wasm",
  "dango/hyperlane/isms/multisig",
  "dango/hyperlane/mailbox",
  "dango/hyperlane/types",
  "dango/hyperlane/va",
  "dango/indexer/cache",
  "dango/indexer/clickhouse",
  "dango/indexer/graphql-types",
  "dango/indexer/hooked",
  "dango/indexer/httpd",
  "dango/indexer/metrics",
  "dango/indexer/sql",
  "dango/pyth/client",
  "dango/pyth/types",
  "dango/sdk",
  "dango/sdk/cli",
  "dango/utils/config-parser",
  "dango/utils/disk-saver",
  "dango/utils/dyn-event",
  "dango/utils/error-backtrace",
  "dango/utils/error-backtrace/derive",
  "dango/utils/eth",
  "dango/utils/identity",
  "dango/utils/temp-rocksdb",
]
resolver = "2"

[workspace.package]
authors       = ["Left Curve Software Limited (https://grug.build/about.html)"]
categories    = ["cryptography::cryptocurrencies"]
documentation = "https://grug.build/whitepaper.html"
edition       = "2024"
homepage      = "https://grug.build"
keywords      = ["blockchain", "wasm"]
license       = "TBD"
repository    = "https://github.com/left-curve/left-curve"
rust-version  = "1.89" # clickhouse-rs 0.14 requires rust 1.89+
version       = "0.0.0"

[workspace.dependencies]
actix-codec                 = "0.5"
actix-cors                  = "0.7"
actix-files                 = "0"
actix-http                  = "3"
actix-service               = "2"
actix-test                  = "0.1"
actix-web                   = "4"
actix-web-metrics           = "0.4"
aes-gcm                     = "0.10"
alloy                       = "1.1"
anyhow                      = "1"
assert-json-diff            = "2"
assertor                    = "0.0.4"
async-graphql               = { version = "7.0", features = ["apollo_persisted_queries", "apollo_tracing", "chrono", "dataloader", "decimal", "log", "opentelemetry", "tracing", "unblock", "url", "uuid"] }
async-graphql-actix-web     = "7.0"
async-stream                = "0"
async-trait                 = "0"
awc                         = "3"
aws-config                  = "1"
aws-credential-types        = "1"
aws-sdk-s3                  = "1"
axum                        = { version = "0.8", features = ["ws"] }
bigdecimal                  = "0.4"
bip32                       = "0.5"
blake2                      = "0.10"
blake3                      = "1"
bnum                        = "0.14"
borsh                       = "1"
byteorder                   = "1"
chrono                      = "0.4"
clap                        = { version = "4", features = ["derive"] }
clickhouse                  = "0.14"
clru                        = "0.6"
colored                     = "3"
colored_json                = "5"
config                      = "0.15"
criterion                   = "0.8"
csv                         = "1.3"
data-encoding               = "2"
dialoguer                   = "0.12"
digest                      = "0.10" # FIXME: can't bump to 0.11 because RustCrypto requires 0.10
dotenvy                     = "0.15.7"
dyn-clone                   = "1"
ed25519-dalek               = "2"
elsa                        = "1"
futures                     = "0.3"
futures-util                = "0.3"
graphql_client              = "0.14"
hex                         = "0.4"
hex-literal                 = "1"
home                        = "0.5"
itertools                   = "0.14"
k256                        = "0.13"
libc                        = "0.2"
lzma-rs                     = "0.3"
metrics                     = "0.24"
metrics-exporter-prometheus = "0.18"
num_cpus                    = "1"
opentelemetry               = "0.31"
opentelemetry-otlp          = { version = "0.31", features = ["grpc-tonic", "trace"] }
opentelemetry_sdk           = { version = "0.31", features = ["rt-tokio"] }
ouroboros                   = "0.18"
p256                        = "0.13"
parking_lot                 = { version = "0.12", features = ["arc_lock", "send_guard"] }
paste                       = "1"
pbkdf2                      = "0.12"
proptest                    = "1"
prost                       = "0.14"
pyth-lazer-client           = "22.0.0"
pyth-lazer-protocol         = "0.35.0"
quote                       = "1"
rand                        = "0.8" # FIXME: can't bump to 0.10 because RustCrypto requires 0.8
reqwest                     = { version = "0.13", features = ["stream"] }
ripemd                      = "0.1"
roaring                     = "0.11"
rocksdb                     = "0.24"
sea-orm                     = { version = "1", features = ["runtime-tokio-rustls", "sea-orm-internal", "sqlx-postgres", "sqlx-sqlite", "with-bigdecimal", "with-chrono", "with-json", "with-time", "with-uuid"] }
sea-orm-migration           = { version = "1", features = ["runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite", "with-chrono", "with-json", "with-uuid"] }
sentry                      = { version = "0.47", features = ["log", "logs", "tracing"] }
sentry-actix                = "0.47"
serde                       = "1"
serde_json                  = "1"
serde_with                  = "3"
sha2                        = "0.10"
sha3                        = "0.10"
signature                   = "2"
sqlx                        = "0.8"
strum                       = "0.28"
strum_macros                = "0.28"
syn                         = "2"
tempfile                    = "3"
tendermint                  = "0.40.4"
tendermint-rpc              = "0.40.4"
test-case                   = "3"
thiserror                   = "2"
tokio                       = { version = "1", features = ["full"] }
tokio-stream                = { version = "0.1", features = ["sync"] }
tokio-tungstenite           = { version = "0.28", features = ["native-tls"] }
tower                       = "0.5"
tower-abci                  = "0.19"
tracing                     = { version = "0.1" }
tracing-opentelemetry       = "0.32"
tracing-subscriber          = { version = "0.3", features = ["env-filter", "fmt", "json"] }
typenum                     = "1"
url                         = "2.5.4"
uuid                        = { version = "1", features = ["serde", "v4"] }
wasmer                      = "7"
wasmer-middlewares          = "7"

# Left curve packages
dango-account           = { path = "dango/exchange/account" }
dango-account-factory   = { path = "dango/exchange/account-factory" }
dango-auth              = { path = "dango/exchange/auth" }
dango-bank              = { path = "dango/exchange/bank" }
dango-gateway           = { path = "dango/exchange/gateway" }
dango-genesis           = { path = "dango/exchange/genesis" }
dango-oracle            = { path = "dango/exchange/oracle" }
dango-order-book        = { path = "dango/exchange/order-book" }
dango-perps             = { path = "dango/exchange/perps" }
dango-proposal-preparer = { path = "dango/exchange/proposal-preparer" }
dango-sdk               = { path = "dango/sdk" }
dango-taxman            = { path = "dango/exchange/taxman" }
dango-testing           = { path = "dango/testing" }
dango-types             = { path = "dango/exchange/types" }
dango-upgrade           = { path = "dango/exchange/upgrade" }
dango-vesting           = { path = "dango/exchange/vesting" }
dango-warp              = { path = "dango/exchange/warp" }
grug-app                = { path = "dango/grug/app" }
grug-crypto             = { path = "dango/grug/crypto" }
grug-db-disk            = { path = "dango/grug/db/disk" }
grug-db-memory          = { path = "dango/grug/db/memory" }
grug-ffi                = { path = "dango/grug/ffi" }
grug-jmt                = { path = "dango/grug/jellyfish-merkle" }
grug-macros             = { path = "dango/grug/macros" }
grug-math               = { path = "dango/grug/math" }
grug-storage            = { path = "dango/grug/storage" }
grug-tester             = { path = "dango/grug/tester" }
grug-types              = { path = "dango/grug/types" }
grug-vm-hybrid          = { path = "dango/grug/vm/hybrid" }
grug-vm-rust            = { path = "dango/grug/vm/rust" }
grug-vm-wasm            = { path = "dango/grug/vm/wasm" }
hyperlane-ism           = { path = "dango/hyperlane/isms/multisig" }
hyperlane-mailbox       = { path = "dango/hyperlane/mailbox" }
hyperlane-types         = { path = "dango/hyperlane/types" }
hyperlane-va            = { path = "dango/hyperlane/va" }
indexer-cache           = { path = "dango/indexer/cache" }
indexer-clickhouse      = { path = "dango/indexer/clickhouse" }
indexer-graphql-types   = { path = "dango/indexer/graphql-types" }
indexer-hooked          = { path = "dango/indexer/hooked" }
indexer-httpd           = { path = "dango/indexer/httpd", features = ["tracing"] }
indexer-metrics         = { path = "dango/indexer/metrics" }
indexer-sql             = { path = "dango/indexer/sql" }
pyth-client             = { path = "dango/pyth/client" }
pyth-types              = { path = "dango/pyth/types" }

# Utilities
config-parser   = { path = "dango/utils/config-parser" }
disk-saver      = { path = "dango/utils/disk-saver" }
dyn-event       = { path = "dango/utils/dyn-event" }
error-backtrace = { path = "dango/utils/error-backtrace" }
eth-utils       = { path = "dango/utils/eth" }
identity        = { path = "dango/utils/identity" }
temp-rocksdb    = { path = "dango/utils/temp-rocksdb" }

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
panic            = "abort"
rpath            = false
