[project]
dependencies    = ["jupyterlab>=4.4.2", "matplotlib>=3.10.3", "numpy>=2.2.6", "pandas>=2.2.3"]
description     = "Python prototypes for algorithms used in Dango (https://dango.exchange/) DeFi products"
name            = "dango"
readme          = "README.md"
requires-python = ">=3.13"
version         = "0.0.0"
