[package]
name          = "dango-e2e"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
documentation = { workspace = true }
repository    = { workspace = true }
license       = { workspace = true }
categories    = { workspace = true }

[dependencies]
anyhow                  = { workspace = true }
dango-account-factory   = { path = "../contracts/account/factory", features = ["library"] }
dango-account-safe      = { path = "../contracts/account/safe", features = ["library"] }
dango-account-spot      = { path = "../contracts/account/spot", features = ["library"] }
dango-amm               = { path = "../contracts/amm", features = ["library"] }
dango-bank              = { path = "../contracts/bank", features = ["library"] }
dango-genesis           = { path = "../crates/genesis" }
dango-ibc-transfer      = { path = "../contracts/ibc-transfer", features = ["library"] }
dango-taxman            = { path = "../contracts/taxman", features = ["library"] }
dango-token-factory     = { path = "../contracts/token-factory", features = ["library"] }
dango-types             = { path = "../crates/dango" }
grug                    = { path = "../crates/std" }
k256                    = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }
