[package]
name          = "cw-account"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
documentation = { workspace = true }
repository    = { workspace = true }
license       = { workspace = true }
categories    = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# If enabled, Wasm exports won't be created. This allows this contract to be
# imported into other contracts as a library.
library = []

[dependencies]
anyhow = { workspace = true }
cw-std = { path = "../../crates/std" }
sha2   = { workspace = true }
