[package]
name          = "grug-account"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
documentation = { workspace = true }
repository    = { workspace = true }
license       = { workspace = true }
categories    = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# If enabled, Wasm exports won't be created. This allows this contract to be
# imported into other contracts as a library.
library = []

# Note: Contracts that are used in the testing suite (grug-testing) can't use
# the `grug` meta-crate, to avoid circular dependency:
# > grug-account --> grug-testing --> grug
# Instead, they have to use Grug crates (types, storage, macros) individually.
[dependencies]
anyhow       = { workspace = true }
borsh        = { workspace = true, features = ["derive", "de_strict_order"] }
grug-macros  = { path = "../../crates/macros" }
grug-storage = { path = "../../crates/storage" }
grug-types   = { path = "../../crates/types" }
serde        = { workspace = true, features = ["derive"] }
