[package]
name          = "dango-token-factory"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
documentation = { workspace = true }
repository    = { workspace = true }
license       = { workspace = true }
categories    = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# If enabled, Wasm exports won't be created. This allows this contract to be
# imported into other contracts as a library.
library = []

[dependencies]
anyhow                = { workspace = true }
dango-account-factory = { path = "../account/factory", features = ["library"] }
dango-types           = { path = "../../crates/dango" }
grug                  = { path = "../../crates/std" }

[dev-dependencies]
