[package]
name          = "grug-app"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
documentation = { workspace = true }
repository    = { workspace = true }
license       = { workspace = true }
categories    = { workspace = true }

[dependencies]
borsh            = { workspace = true, features = ["de_strict_order"] }
dyn-clone        = { workspace = true }
grug-storage     = { path = "../storage" }
grug-types       = { path = "../types" }
hex              = { workspace = true }
prost            = { workspace = true }
serde            = { workspace = true }
tendermint-proto = { workspace = true }
tendermint-abci  = { workspace = true }
thiserror        = { workspace = true }
tracing          = { workspace = true }

[dev-dependencies]
