[package]
name          = "grug-app"
version       = { workspace = true }
authors       = { workspace = true }
edition       = { workspace = true }
rust-version  = { workspace = true }
documentation = { workspace = true }
repository    = { workspace = true }
license       = { workspace = true }
categories    = { workspace = true }

[features]
default = []
abci    = ["tendermint-abci", "tendermint-proto"]
tracing = ["chrono", "dep:tracing"]

[dependencies]
chrono           = { workspace = true, optional = true }
grug-storage     = { path = "../storage" }
grug-types       = { path = "../types" }
prost            = { workspace = true }
serde            = { workspace = true }
tendermint-abci  = { workspace = true, optional = true }
tendermint-proto = { workspace = true, optional = true }
thiserror        = { workspace = true }
tracing          = { workspace = true, optional = true }

[dev-dependencies]
